--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,26 +13,30 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
-    color: #333;
+    background: url("https://www.profootballhof.com/assets/1/15/CFL1400.jpg?94893");
+    background-size: cover;
+    background-position: center;
+    color:rgb(255, 255, 255);
     font-family: Sans-Serif;
     line-height: 18px;
   }
 
-  .wrapper {
-    background: #fff;
-    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
-    box-shadow: 0 0 10px rgba(0,0,0,.3);
-    margin: 16px auto;
+    .wrapper { 
+    background: rgb(235, 123, 19);
+    border: 3px solid white;
+    border-radius: 20px;
+    margin-top: 200px;
+    margin: 100px auto;
     max-width: 960px;
-    padding: 2.25%; /* 18px / 800px */
+    padding: 2.25%; 
     width: 85%;
-  }
+    } 
 
   h1 {
     font-size: 36px;
     line-height: 54px;
+    
+     font-family: 'Piedra', cursive;
   }
 
   h2 {
@@ -47,8 +51,30 @@
     line-height: 36px;
   }
 
+  a {
+    font-size: 14px;
+    color: white;
+  }
+  li {
+    /* display: inline; */
+    padding: 0px 10px 0px 10px; 
+  }
+
   p {
     margin-bottom: 18px;
+  }
+
+  input {
+    border: 0;
+    padding: 10px;
+    font-size: 18px; 
+  }
+
+  input[type="submit"] {
+    background: rgb(4, 26, 51);
+    border: 1px solid white;
+    border-radius: 15px;
+    color: white;
   }
 
   .main {
@@ -83,33 +109,5 @@
   }
 }
 
-@media screen and (max-width: 600px) {
-  .wrapper {
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    width: auto;
-  }
 
-  .content, .sidebar {
-    float: none;
-    width: 100%;
-  }
 
-  .sidebar {
-    background: transparent;
-    border: none;
-    border-top: 2px solid #ccc;
-    padding: 0;
-  }
-
-  h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
-}
