--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,7 +9,10 @@
   </head>
   <body>
     <div class="wrapper">
-
+        
+        <%if is_loggged_in? %>
+          <h1> <%= current_user.username%> </h1>
+        <%end%> 
         <%= yield %>
 
       <footer class="branding">
