--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 <h1>Welconme To The SetList Creator</h1>
-
-<p> Please <a href="/users/signup">Sign Up</a> or <a href="/users/login">Log In</a> to continue.
-
+<div class=signup>
+    <p> Please <a href="/users/signup">Sign Up</a> or <a href="/users/login">Log In</a> to continue.</p>
+</div>
