--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
-
   <head>
-
     <title>SetList_Creator</title>
-
     <link rel="stylesheet" href="/stylesheets/main.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Piedra&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Righteous&display=swap" rel="stylesheet">  
   </head>
   <body>
-    <div class="wrapper">
-        
-        <%if is_loggged_in? %>
-          <h1> <%= current_user.username%> </h1>
-        <%end%> 
-        <%= yield %>
+    <div class="header">
+      <header>
+        <%if is_logged_in? %>
+         <ul>
+            <li><a href="/users/<%=current_user.id%>"> <%= current_user.username%></a></li>
+            <li><a href="/songs"> All Songs</a></li>
+            <li><a href="/songs/new">Create New Song</a> </li>
+            <li><a href="/setlists">All Setlists</a> </li>
+            <li><a href="/setlists/new">Create New Setlist</a> </li>
+            <li><a href="/users/logout">Log Out</a></li>
+          </ul>  
+        <%end%>
+      </header>
+    </div> 
 
+    <div class="wrapper">
+        <%= yield %>
       <footer class="branding">
         <small>&copy; 2020 <strong>Setlist Creator</strong></small>
       </footer>
     </div>
-
-   
   </body>
 </html>
