--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,7 @@
 <h1>Log In</h1>
+
+  <%= @error %>
+
   <form action="/users/login" method="POST">
     <input type="text" name="user[username]" placeholder="Username:">
     <input type="password" name="user[password]" placeholder="Password:">
