--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,9 +1,9 @@
 <h1>Sign Up Here </h1>
 
-<%= @error %>
+  <%= @error %>
 
-<form action="/users/signup" method="POST">
-  <input type="text" name="user[username]" placeholder="Username:" required >
-  <input type="password" name="user[password]" placeholder="Password:" >
-  <input type="submit" value="Sign Up">
-</form>
+  <form action="/users/signup" method="POST">
+    <input type="text" name="user[username]" placeholder="Username" required >
+    <input type="password" name="user[password]" placeholder="Password" >
+    <input type="submit" value="Sign Up">
+  </form>
