--- a/app/views/setlists/index.erb
+++ b/app/views/setlists/index.erb
@@ -1,15 +1,6 @@
-<%if is_loggged_in? %>
-
-  <h1>Setlist:</h1>
-    <ul>
-        <% @songs.each do |song|%>
-        <li>*<a href="/songs/<%=song.id%>"> <%=song.title%></a> by <%=song.artist%></li>
-        <%end%>
-    </ul><br>
-
-
-    <p><a href="/songs/new">Add New Song</a></p>
-    <p><a href="/users/:id">Home</a></p>
-    <p><a href="/users/logout">Log Out</a></p>
-
-<%end%>
+<h1>Setlists</h1>
+  <ul>
+    <% @setlists.each do |setlist|%>
+      <li><a href="/setlists/<%=setlist.id%>"><%=setlist.name%></a> - <%=setlist.type_of_show%> created by <%=setlist.user.username%></li><br><br>
+    <%end%>
+  </ul>
