--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,6 @@
 @media screen {
   /* --- Reset Styles --- */
   * {
-    list-style: none;
     margin: 0;
     padding: 0;
   }
@@ -13,16 +12,32 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background: url("https://www.profootballhof.com/assets/1/15/CFL1400.jpg?94893");
+    background: url("/images/concert.jpg");
     background-size: cover;
     background-position: center;
     color:rgb(255, 255, 255);
     font-family: Sans-Serif;
     line-height: 18px;
   }
-
+  .header {
+    text-align: right;
+  }
+  .header li {
+    display: inline;
+    font-family: 'Righteous', cursive;
+    font-size: 30px;
+    padding: 0px 10px 0px 10px; 
+  }
+  .header ul {
+    padding: 10px;
+    background: rgba(6, 76, 116, 0.719);
+  }
+  .header a {
+    color: rgb(255, 255, 255);
+  }
     .wrapper { 
-    background: rgb(235, 123, 19);
+    /* background: rgb(235, 123, 19); */
+    background: rgba(6, 76, 116, 0.39);
     border: 3px solid white;
     border-radius: 20px;
     margin-top: 200px;
@@ -33,17 +48,17 @@
     } 
 
   h1 {
+    border-bottom: 2px solid #ccc;
     font-size: 36px;
     line-height: 54px;
-    
-     font-family: 'Piedra', cursive;
+    margin-bottom: 16px;
+    font-family: 'Permanent Marker', cursive;
   }
 
   h2 {
-    border-bottom: 2px solid #ccc;
-    font-size: 24px;
-    line-height: 36px;
+    font-size: 30px;
     margin-bottom: 16px;
+    font-family: 'Permanent Marker', cursive;
   }
 
   h3 {
@@ -52,50 +67,46 @@
   }
 
   a {
-    font-size: 14px;
-    color: white;
+    font-size: 20px;
+    font-family: 'Righteous', cursive;
+    /* color: rgb(20, 246, 39); */
+    color: rgb(188, 255, 65)
   }
   li {
-    /* display: inline; */
+    font-size: 20px;
+    font-family: 'Yantramanav', sans-serif;
     padding: 0px 10px 0px 10px; 
   }
 
   p {
     margin-bottom: 18px;
+    font-size: 20px;
+    font-family: 'Yantramanav', sans-serif;
   }
 
   input {
     border: 0;
-    padding: 10px;
+    padding: 6px;
     font-size: 18px; 
+    font-family: 'Yantramanav', sans-serif;
   }
 
   input[type="submit"] {
-    background: rgb(4, 26, 51);
+    background: rgba(6, 76, 116, 0.719);
     border: 1px solid white;
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
+    font-size: 18px; 
+    font-family: 'Yantramanav', sans-serif;
   }
-
-  .main {
-    overflow: hidden;
+  input[type="checkbox"] {
+    font-size: 18px;
+    font-family: 'Yantramanav', sans-serif;
   }
-
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
-  }
-
-  .sidebar {
-    background: #eee;
-    border: 1px solid #ccc;
-    float: right;
-    padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
-  }
-
-  .sidebar ul {
-    font-size: 14px;
+  label {
+    font-size: 20px;
+    font-family: 'Righteous', cursive;
+    color: rgb(188, 255, 65)
   }
 
   .branding {
@@ -106,6 +117,20 @@
     border-top: 2px solid #ccc;
     margin-top: 20px;
     padding-top: 20px;
+  }
+
+  .edit_and_delete {
+    display: inline;
+    padding: 0px 10px 0px 10px; 
+  }
+  .signup p{
+    font-family: 'Righteous', cursive;
+    color: rgb(255, 255, 255);
+  }
+  .create-new a{
+    font-size: 18px;
+    font-family: 'Righteous', cursive;
+    color: rgb(255, 255, 255);
   }
 }
 
