--- a/app/views/setlists/show.erb
+++ b/app/views/setlists/show.erb
@@ -7,7 +7,7 @@
 
    <ol>
       <%@setlist.songs.each do |song|%>
-         <li><a href="/songs/<%=song.id%>"><%=song.title%></a> -- <%=song.artist%></li><br>
+         <li><a href="/songs/<%=song.id%>"><%=song.title%></a> - <%=song.artist%> - <%=song.duration%></li><br>
       <%end%>
    </ol>
      
